--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -48,4 +48,15 @@
         android:textSize="@dimen/abc_text_size_display_1_material"
         android:layout_marginTop="50dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_retry_connection"
+        android:id="@+id/retryButton"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:background="@color/material_deep_teal_200"
+        android:textColor="@color/primary_text_default_material_dark"
+        android:padding="@dimen/abc_button_padding_horizontal_material" />
+
 </LinearLayout>
