--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,7 +20,7 @@
         android:text="most popular by ..."
         android:id="@+id/selectedBytextView"
         android:layout_gravity="center_horizontal"
-        android:paddingBottom="10dp" />
+        android:paddingBottom="7dp" />
 
     <GridView
         android:layout_width="fill_parent"
@@ -31,7 +31,7 @@
         android:horizontalSpacing="5dp"
         android:layout_margin="0dp"
         android:padding="0dp"
-        android:verticalSpacing="0dp"
+        android:verticalSpacing="5dp"
         android:numColumns="4"
         android:nestedScrollingEnabled="false"
         android:layout_gravity="center" />
@@ -46,7 +46,8 @@
         android:background="@color/material_blue_grey_800"
         android:textColor="@color/primary_text_default_material_dark"
         android:textSize="@dimen/abc_text_size_display_1_material"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="50dp"
+        android:visibility="gone" />
 
     <Button
         android:layout_width="wrap_content"
@@ -57,6 +58,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/material_deep_teal_200"
         android:textColor="@color/primary_text_default_material_dark"
-        android:padding="@dimen/abc_button_padding_horizontal_material" />
+        android:padding="@dimen/abc_button_padding_horizontal_material"
+        android:visibility="gone" />
 
 </LinearLayout>
