--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,17 +24,16 @@
 
     <GridView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:id="@+id/poster_gridView"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:horizontalSpacing="5dp"
-        android:layout_margin="0dp"
-        android:padding="0dp"
-        android:verticalSpacing="5dp"
-        android:numColumns="4"
+        android:verticalSpacing="2dp"
         android:nestedScrollingEnabled="false"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:numColumns="auto_fit"
+        android:stretchMode="spacingWidthUniform"
+        android:columnWidth="100dp" />
 
     <TextView
         android:layout_width="match_parent"
