--- a/app/src/main/res/layout/list_item_movie_poster.xml
+++ b/app/src/main/res/layout/list_item_movie_poster.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<FrameLayout
+<ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:id="@+id/image_frame">
-
-
-
-    <ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/list_item_movie_poster_imageview"
-        android:scaleType="fitCenter"
-        android:minHeight="140dp"
-        android:maxHeight="160dp" />
-
-</FrameLayout>
+    android:layout_height="150dp"
+    android:id="@+id/list_item_movie_poster_imageview"
+    android:scaleType="fitCenter"
+    android:layout_gravity="center"
+    android:padding="0dp"
+    android:contentDescription="movie poster" />
