--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -4,25 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="4dp"
-    android:paddingRight="4dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:showIn="@layout/activity_movie_detail"
     tools:context="com.derekmorrison.movieref.MovieDetailActivityFragment"
     android:orientation="vertical">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/movie_title_textview"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:contentDescription="Movie Title"
-        android:text="Movie Title"
-        android:gravity="center_vertical"
-        android:layout_gravity="center"
-        android:layout_marginBottom="8dp">
-    </TextView>
+        android:layout_gravity="center_horizontal"
+        android:background="@color/material_blue_grey_800">
+
+        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/movie_title_textview"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:contentDescription="Movie Title"
+            android:text="Movie Title"
+            android:gravity="center_vertical"
+            android:layout_gravity="center"
+            android:background="@color/material_blue_grey_800"
+            android:textColor="@color/bright_foreground_material_dark"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp">
+        </TextView>
+    </FrameLayout>
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -35,7 +47,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
     <RelativeLayout
@@ -51,6 +63,7 @@
                 android:gravity="center_vertical"
                 android:layout_gravity="right"
                 android:layout_alignParentLeft="true"
+                android:layout_marginLeft="4dp"
                 android:layout_marginRight="5dp">
             </TextView>
 
@@ -84,6 +97,7 @@
                 android:text="06-23-2014"
                 android:gravity="center_vertical"
                 android:layout_gravity="right"
+                android:layout_marginRight="4dp"
                 android:layout_alignParentRight="true">
             </TextView>
 
@@ -96,8 +110,8 @@
             android:contentDescription="Movie Poster"
             android:scaleType="fitCenter"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -105,6 +119,8 @@
             android:id="@+id/movie_overview_textview"
             android:contentDescription="Movie Plot Summary"
             android:text="Plot Summary"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"
             android:gravity="center_vertical">
         </TextView>
         </LinearLayout>
